# fsex.rust

./: Cargo.toml
src/: main.rs
