[package]
name = "fsexr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.38"
flate2 = "1.0.25"
serde = { version = "1.0.159" , features = ["derive"] }
serde_json = "1.0.95"
clap = { version = "4.0", features = ["derive"] }
